turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: not found: value color
	for (c <- 0 to color.length-1)
                       ^LangtonsAnt:23: error: object java.awt.Color is not a value
			setCouleurSol (Color)
                                       ^LangtonsAnt:29: error: object java.awt.Color is not a value
			setCouleurSol (Color)
                                       ^